--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/github.com/SlyMarbo/spdy"]
-	path = src/github.com/SlyMarbo/spdy
-	url = https://github.com/SlyMarbo/spdy.git
+[submodule "src/github.com/amahi/spdy"]
+	path = src/github.com/amahi/spdy
+	url = https://github.com/amahi/spdy.git
