--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/github.com/amahi/spdy"]
 	path = src/github.com/amahi/spdy
-	url = ssh://git@github.com:amahi/spdy.git
+	url = git@github.com:amahi/spdy.git
